# flysoar-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  SKILL.md  install.sh
.github/workflows/: release.yml
src/: api.rs  main.rs  models.rs  output.rs  spinner.rs  sse.rs
website/: package-lock.json  package.json
website/app/: globals.css  layout.js  not-found.js  page.js
website/components/: LiveFlightScene.jsx  TextType.jsx
website/scripts/: copy-install-script.js  copy-public-assets.js
